--- a/ChangeLog
+++ b/ChangeLog
@@ -63,6 +63,15 @@
 
 2012-09-06  H.J. Lu  <hongjiu.lu@intel.com>
 
+	[BZ #13679]
+	* Makeconfig (+link): Defined as $(+link-static) if
+	$(build-shared) isn't yes.
+	(link-tests): Defined as $(+link-static-tests) if $(build-shared)
+	isn't yes.
+	(static-gnulib): Add -lgcc_eh if $(build-shared) isn't yes.
+
+2012-09-06  H.J. Lu  <hongjiu.lu@intel.com>
+
 	[BZ #14544]
 	* Makeconfig (link-static-before-libc): Replace $(+prector)
 	with $(+prectorT).
