--- a/ChangeLog
+++ b/ChangeLog
@@ -154,6 +154,8 @@
 	* posix/Makefile (tests): Add tst-regex bug-regex5 bug-regex33
 	only if $(build-shared) is yes.
 
+	* sunrpc/Makefile (tests): Run only if $(build-shared) is yes.
+
 2012-09-06  H.J. Lu  <hongjiu.lu@intel.com>
 
 	[BZ #14544]
