--- a/localedata/ChangeLog
+++ b/localedata/ChangeLog
@@ -1,3 +1,8 @@
+2013-01-15  Andreas Schwab  <schwab@suse.de>
+
+	[BZ #14991]
+	* charmaps/BIG5-HKSCS: Update to HKSCS-2008.
+
 2013-01-14  Joseph Myers  <joseph@codesourcery.com>
 
 	* Makefile (bug-setlocale1-ARGS): Use $(host-test-program-cmd),
