Update BIG5-HKSCS charmap to HKSCS-2008

--- a/localedata/ChangeLog
+++ b/localedata/ChangeLog
@@ -1,3 +1,8 @@
+2013-05-13  Andreas Schwab  <schwab@suse.de>
+
+	[BZ #14991]
+	* charmaps/BIG5-HKSCS: Update to HKSCS-2008.
+
 2013-04-27  Nik Kalach  <nikka@fedoraproject.org>
 
 	[BZ #15221]
