--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-01-11  Roland McGrath  <roland@hack.frob.com>
+
+	* configure.in (sysnames): Use $multi_arch_d in setting up $mach list,
+	not in the main loop.
+	* configure: Regenerated.
+
 2013-01-11  Steve Ellcey  <sellcey@mips.com>
 
 	* elf/elf.h (EF_MIPS_ARCH_32): Fix value.
