--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-01-20  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* sysdeps/powerpc/powerpc32/power4/fpu/mpa.c: Don't include
+	"mpa2.h".
+	* sysdeps/powerpc/powerpc64/power4/fpu/mpa.c: Likewise.
+
 2013-01-18  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
 	[BZ #14496]
