--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2013-06-13  Roland McGrath  <roland@hack.frob.com>
 
+	* Makerules [inhibit-sysdep-asm] (check-inhibit-asm): Variable removed.
+	($(common-objpfx)sysd-rules): Replace shell logic with running ...
+	* scripts/sysd-rules.awk: ... this new script.
+	* sysdeps/mach/hurd/Makefile (inhibit-sysdep-asm): Use a regexp rather
+	than a glob-style pattern.
+
+2013-06-13  Roland McGrath  <roland@hack.frob.com>
+
 	* posix/tst-waitid.c (do_test): Distinguish different instances of
 	stopped/continued in CHECK_SIGCHLD uses.  Insert a delay between
 	sending SIGSTOP and calling waitpid to ensure SIGCHLD gets delivered
